k8s/pipeline.yaml
# NOTE: github-ibm-ssh secret is created manually:
# oc create secret generic github-ibm-ssh --from-file=ssh-privatekey=~/.ssh/id_ed25519 --type=kubernetes.io/ssh-auth
# oc annotate secret github-ibm-ssh tekton.dev/git-0=github.ibm.com
# oc secrets link pipeline github-ibm-ssh
---
# Route for the EventListener (so GitHub can reach it)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cic-togive-webhook
  namespace: cic-togive-dev
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: el-cic-togive-webhook
    weight: 100
  port:
    targetPort: http-listener
